dataset1235/2025-2/1955397009/users/1439409056/executions/2304143742_3090212252.log
== RUN (2025-09-02 22:46:31)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste < 15:
  print("Nao")
if teste >= 24:
  print("Sim")
if teste <= 16:
  print("Nao")
else:
  print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:52:49)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
else:
  print("Sim")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
informe a idade:Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:04:49)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste == 15:
  print("15")
if teste == 24:
  print("24")
if teste == 16:
  print("16")
else:
  print("x")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:x
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
informe a idade:x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:03:51)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste == 15:
  print("15")
if teste == 24:
  print("24")
if teste == 16:
  print("16")
else:
print(x)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
-- ERROR:
File "XXXX", line 10
    print(x)
    ^
IndentationError: expected an indented block after 'else' statement on line 9
-- TEST CASE 2:
---- input:
0
---- correct output:
x
-- ERROR:
File "XXXX", line 10
    print(x)
    ^
IndentationError: expected an indented block after 'else' statement on line 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:44:28)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("nao")
if teste >= 24:
  print("sim")
if teste <= 16:
  print("nao")
else:
  print("x")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
x
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:46:05)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
if teste >= 24:
  print("Sim")
if teste <= 16:
  print("Nao")
else:
  print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:52:34)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
else:
  print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
informe a idade:Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:50:17)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
if teste == 16:
  print("Nao")
else:
  teste => 24
  print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
-- ERROR:
File "XXXX", line 8
    teste => 24
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
x
-- ERROR:
File "XXXX", line 8
    teste => 24
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:05:04)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste == 15:
  print("15")
if teste == 24:
  print("24")
if teste == 16:
  print("16")
else:
  print("x")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:x
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
informe a idade:x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:49:59)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
if teste == 16:
  print("Nao")
else:
  teste > 24
  print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:44:16)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("nao")
if teste >= 24:
  print("sim")
if teste <= 16:
  print("nao")
else:
  print("x")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
x
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:46:15)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
if teste >= 24:
  print("Sim")
if teste <= 16:
  print("Nao")
else:
  print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:48:04)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
if teste == 16:
  print("Nao")
else:
  teste >= 24
  print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:05:25)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste == 15:
  print("15")
if teste == 24:
  print("24")
if teste == 16:
  print("16")
else:
  print("x")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:x
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
informe a idade:x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:46:56)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste < 15:
  print("Nao")
if teste >= 24:
  print("Sim")
if teste == 16:
  print("Nao")
else:
  print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:49:08)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
if teste == 16:
  print("Nao")
else:
  teste >= 24
  print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:04:06)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste == 15:
  print("15")
if teste == 24:
  print("24")
if teste == 16:
  print("16")
else:
print("x")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
-- ERROR:
File "XXXX", line 10
    print("x")
    ^
IndentationError: expected an indented block after 'else' statement on line 9
-- TEST CASE 2:
---- input:
0
---- correct output:
x
-- ERROR:
File "XXXX", line 10
    print("x")
    ^
IndentationError: expected an indented block after 'else' statement on line 9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:05:16)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste == 15:
  print("15")
if teste == 24:
  print("24")
if teste == 16:
  print("16")
else:
  print("x")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:x
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
informe a idade:x
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:52:49)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
else:
  print("Sim")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
informe a idade:Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:53:15)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("x")
else:
  print("x")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:x
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
informe a idade:x
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:44:34)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("nao")
if teste >= 24:
  print("sim")
if teste <= 16:
  print("nao")
else:
  print("x")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
x
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:49:21)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
if teste == 16:
  print("Nao")
else:
  teste >= 24
  print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:47:27)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
if teste >= 24:
  print("Sim")
if teste == 16:
  print("Nao")
else:
  print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:52:26)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
else:
  print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
informe a idade:Sim
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
informe a idade:Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:49:00)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("Nao")
if teste == 16:
  print("Nao")
else:
  teste >= 24
    print("Sim")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
-- ERROR:
File "XXXX", line 9
    print("Sim")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
0
---- correct output:
x
-- ERROR:
File "XXXX", line 9
    print("Sim")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:44:32)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("nao")
if teste >= 24:
  print("sim")
if teste <= 16:
  print("nao")
else:
  print("x")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
x
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:44:36)
-- CODE: 
#Nao apague a linha 2 deste codigo
teste = int(input("informe a idade:"))
if teste <= 15:
  print("nao")
if teste >= 24:
  print("sim")
if teste <= 16:
  print("nao")
else:
  print("x")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
111
---- correct output:
15
2 5 6
24
2 5 7 8
16
2 5 7 8
---- user output:
x
-- TEST CASE 2:
---- input:
0
---- correct output:
x
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
